# pinn-material-1d

./: README.md  pyproject.toml  requirements.txt
data/: heat_data.py
deprecated/: trainer_weak.py
experiments/: multi_fidelity_comparison.py
models/: heat_pinn.py  heat_pinn_hard_bc.py  heat_pinn_strategy.py
notebooks/: heat_equation_strategic.ipynb
results/: plotter.py
training/: trainer.py  trainer_hard_bc.py  trainer_strategy.py
utils/: integrator.py  test_functions.py
