[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn_project"
version = "0.1.0"
description = "Adaptive Multi-Fidelity Physics-Informed Neural Networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]